--- a/public/stylesheets/teacher-form-input.css
+++ b/public/stylesheets/teacher-form-input.css
@@ -1,4 +1,10 @@
 
+
+
+
+
+
+
 .teacher-info-box {
 	padding: 0px 40px 0px 40px;
 	max-width: 480px;
@@ -9,24 +15,12 @@
 	margin-left: auto;
     margin-right: auto;
     display: block;
+    width:180px;
 }
 
-.setup-signature-name, .setup-signature-email {
-	width: 260px;
-}
-
-/*portrait*/
-@media (min-width: 568px) {
-
-	.setup-signature-title {
-		width: 100px;
-		margin-right: 10px;
-	}
-
-}
 
 .label {
-	font-size: 14px;
+    font-size: 14px;
     font-weight: 600;
     line-height: 1.38;
     margin: 0 0 8px;
@@ -36,15 +30,15 @@
 }
 
 select.input  {
-	height: 45px;
+    height: 45px;
 }
 
 .field .input {
-	margin: 0 0 8px;
+    margin: 0 0 8px;
 }
 
 .input {
-	transition: 75ms ease-in-out;
+    transition: 75ms ease-in-out;
     transition-property: background,border-color,box-shadow,color;
     background: #fff;
     border: 1px solid #c5c7cb;
@@ -55,6 +49,27 @@ select.input  {
     font-size: 14px;
     padding: 12px;
     line-height: normal;
+}
+
+
+
+
+@media (min-width: 450px) {
+
+    .setup-signature-name, .setup-signature-email {
+    	width: 260px;
+    }
+
+}
+
+/*portrait*/
+@media (min-width: 568px) {
+
+	.setup-signature-title {
+		width: 100px;
+		margin-right: 10px;
+	}
+
 }
 
 
